...
    <string name="date_ddmmyy_placeholder">ddmmyy</string>
    <string name="static_new_event">New Event</string>
    <string name="description">Description</string>
    <string name="date_format">yyyy-mm-dd</string>
    <string name="time_format">hh:mm</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="event_name">Event Name:</string>
    <string name="event_description">Event Description:</string>
    <string name="location_field">Location:</string>
    <string name="event_date_field">Event Date:</string>
    <string name="event_time_field">Event Time:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="sort_events">Sort events</string>
    <string name="close">Close</string>
...
    <string name="hint_vendor_email">Email: </string>
    <string name="logout">Logout</string>
    <string-array name="spinner_items">
        <item>(none)</item>
        <item>Name</item>
        <item>Event Date</item>
        <item>Date Added(old -> new)</item>
        <item>Date Added(new -> old)</item>
    </string-array>
    <string name="location_of_event">Location of Event:</string>
    <string name="time_of_event">Time of Event:</string>
    <string name="date_of_event">Date of Event:</string>
    <string name="name_of_event">Name of Event:</string>
    <string name="service_request_accepted">Service Request Accepted</string>
...
